<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:paddingStart="1dp"
    android:paddingEnd="1dp"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:background="@color/warnaDasar"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pendaftaran_tes"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:hint="@string/nama"
            android:autofillHints="Nama" />

        <EditText
            android:id="@+id/etNim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/black"
            android:hint="@string/nim"
            android:autofillHints="NIM" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:hint="@string/email"
                android:autofillHints="Email" />

            <EditText
                android:id="@+id/etHp"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black"
                android:hint="@string/hp"
                android:autofillHints="HP" />
        </LinearLayout>
    </LinearLayout>
    
    <RadioGroup
        android:id="@+id/rgJenisTes"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioEprt"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/eprt"/>
        <RadioButton
            android:id="@+id/radioToefl"
            android:layout_marginStart="50dp"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/toefl_itp"/>
        <RadioButton
            android:id="@+id/radioToeic"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/toeic"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/saya_menyatakan_bahwa_bulan_ini_saya_belum_pernah_mengikuti_tes"/>
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content">-->

<!--        <CheckBox-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"/>-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:text="@string/saya_menyatakan_bahwa_bulan_ini_saya_belum_pernah_mengikuti_tes"/>-->
<!--    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:gravity="bottom">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBtnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <Button
                android:id="@+id/btnDaftar"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/daftar"
                android:textColor="@color/white"
                android:backgroundTint="@color/purple_500"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>